# DevOpsTutorial

./: CMakeLists.txt  Dockerfile  runMain.bat  runMain.sh
libRectangle/: CMakeLists.txt
libRectangle/include/: IRectangle.hpp  Rectangle.hpp
libRectangle/src/: Rectangle.cpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
